Add Pause Window

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,7 +54,9 @@
         "Temp/":true
     },
     "cSpell.words": [
+        "Behaviour",
         "Destory",
+        "Gameover",
         "Spwaner"
     ]
 }
